--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4||^8.0",
         "ext-redis": "*",
         "ext-json": "*",
         "psr/log": "^1.0",
